@startuml ClassDiagram
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
title Story Scripting Editor - Class Diagram (Chapter 5)

package "patterns" {
  interface Observer {
    + update(project: Project): void
  }

  abstract class Observable {
    - observers: List[Observer]
    + add_observer(observer: Observer): void
    + remove_observer(observer: Observer): void
    + notify_observers(): void
  }
}

package "models" {
  enum StoryState {
    DRAFT
    VALIDATED
    PUBLISHED
  }

  class Project {
    - id: str
    - title: str
    - stories: List[Story]
    - characters: List[Character]
    - locations: List[Location]
    - background: BackgroundStory
    + add_story(story: Story): void
    + remove_story(story_id: str): bool
    + add_character(character: Character): void
    + remove_character(character_id: str): bool
    + add_location(location: Location): void
    + remove_location(location_id: str): bool
  }

  class Story {
    - id: str
    - title: str
    - version_label: str
    - parent_version_id: str
    - state: StoryState
    - scenes: List[Scene]
    + add_scene(scene: Scene): void
    + remove_scene(scene_id: str): bool
    + reorder_scenes(order: List[str]): void
    + change_state(new_state: StoryState): void
    + create_version(label: str): Story
  }

  class Scene {
    - id: str
    - title: str
    - short_description: str
    - content: str
    - emotion_tag: str
    - action_tag: str
    - character_refs: List[str]
    - location_refs: List[str]
    + add_character_ref(char_id: str): void
    + remove_character_ref(char_id: str): void
    + add_location_ref(loc_id: str): void
    + remove_location_ref(loc_id: str): void
    + is_empty(): bool
  }

  class Character {
    - id: str
    - name: str
    - visible: bool
    - attributes: dict
    + is_referenced_in(scenes: List[Scene]): bool
  }

  class Location {
    - id: str
    - name: str
    - attributes: dict
    + is_referenced_in(scenes: List[Scene]): bool
  }

  class BackgroundStory {
    - sections: List[BackgroundSection]
    + add_section(section: BackgroundSection): void
    + remove_section(section_id: str): bool
  }

  class BackgroundSection {
    - id: str
    - title: str
    - content: str
  }
}

package "services" {
  class Validator {
    + validate(project: Project): ValidationReport
  }

  class ValidationReport {
    - warnings: List[str]
    - errors: List[str]
    + has_issues(): bool
    + summary(): str
  }

  class StoryCompiler {
    + compile(story: Story, project: Project): str
    + preview(story: Story, project: Project): str
    + export_to_file(content: str, path: str, format: str): void
  }

  class SearchService {
    + search_scenes(criteria: dict): List[Scene]
    + search_characters(criteria: dict): List[Character]
  }

  class Storage {
    + save_project(project: Project, path: str): void
    + load_project(path: str): Project
    + auto_save(project: Project): void
  }
}

package "ui" {
  class Dashboard {
    - project: Project
    - metrics: dict
    + update(project: Project): void
    + get_scene_count(): int
    + get_character_count(): int
    + get_location_count(): int
    + get_character_scene_map(): dict
    + get_word_count(): int
    + get_emotion_distribution(): dict
    + get_action_tag_distribution(): dict
    + get_incomplete_scenes(): List[Scene]
  }

}

' --- Observer pattern wiring ---
Observable <|-- Project : extends
Observable o-- "many" Observer : notifies
Dashboard ..|> Observer : implements
Dashboard --> Project : observes

' --- Domain model relationships ---
Project "1" *-- "many" Story : contains
Project "1" *-- "many" Character : contains
Project "1" *-- "many" Location : contains
Project "1" *-- "1" BackgroundStory : contains

Story "1" *-- "many" Scene : contains
Story --> StoryState
Story "1" --> "0..1" Story : branches from (parent_version)

BackgroundStory "1" *-- "many" BackgroundSection : contains

' --- Service relationships ---
Validator --> Project : validates
Validator --> ValidationReport : produces

StoryCompiler --> Story : compiles
StoryCompiler --> Project : uses

SearchService --> Project : searches

Storage --> Project : persists

@enduml
